--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongoose": "^4.4.13",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "q": "^1.4.1",
     "serve-favicon": "~2.3.0"
   }
 }
